change back to the version with file writing